--- a/Documents/Report/FinalReportVersions/Version04/MaterialsAndMethodsModel.tex
+++ b/Documents/Report/FinalReportVersions/Version04/MaterialsAndMethodsModel.tex
@@ -79,7 +79,7 @@ We present here a model for nucleosomes and DNA re-organization following UV dam
 
 \subsection{Dynamics of histones following UV damages in the region of interest}
 
-Following the experimental protocol, a two-dimensional circular initial damage region (IDR), induced by the UV laser beam, is centered around the focal point (origin of the coordinates) with a fixed area of $A_0$. Following laser induction with a UV dose $u$, the tagged damage region expands radially outward and reaches it maximal area of $A(u)$ after 15 minutes. At the end of expansion, the circular region, characterized by $A(u)$, is defined as the ROI, which remains a fixed region for the measurement of signals at time 0 and 15 minutes. The fraction of signal loss is obtained by calculating the difference between measurements at the two times relative to the initial measurement (see also the empirical definition in XXX). 
+Following the experimental protocol, a two-dimensional circular initial damage region (IDR), induced by the UV laser beam, is centered around the focal point (origin of the coordinates) with a fixed area of $A_0$. Following laser induction with a UV dose $u$, the tagged damage region expands radially outward and reaches its maximal area of $A(u)$ after 15 minutes. At the end of expansion, the circular region, characterized by $A(u)$, is defined as the ROI, which remains a fixed region for the measurement of signals at time 0 and 15 minutes. The fraction of signal loss is obtained by calculating the difference between measurements at the two times relative to the initial measurement (see also the empirical definition in XXX). 
 
 We assume that the loss of DNA and nucleosomes signal post UV-C is due to two mechanisms: the first is chromatin expansion, and the second is nucleosomes sliding along the chromatin. In the first mechanism, recruitment and binding of repair factors to damaged DNA causes chromatin de-compaction, chromatin cross-links break, which result in an expansion of the chromatin in the IDR. Because the majority of damages are inflicted around the laser’s focal point, the accumulation of repair factors will cause pushing force to surrounding chromatin in a radial outward direction, which result in DNA and nucleosome extrusion from the ROI in equal proportions. In the second mechanism, repair factors slide nucleosomes along the chromatin to facilitate efficient repair of DNA by exposing the damaged positions. Sliding nucleosomes over damaged positions on the DNA displaces the tagged damages spatially in the general direction of the ROI boundary, which results in an expansion of the IDR and signal loss from the ROI.
 
