moved files to obsolete. fixed some typos in the doc

--- a/Documents/Report/FinalReportVersions/Version06_HLossFromDRdueToSlidingAndOpening/MaterialsAndMethodsModel.tex
+++ b/Documents/Report/FinalReportVersions/Version06_HLossFromDRdueToSlidingAndOpening/MaterialsAndMethodsModel.tex
@@ -140,7 +140,7 @@
 	translocated with the DNA plus the ones that are sliding out, resulting in
 	the following formulas
 	\begin{equation}\label{eq:DNAstst}
-	D(u) = \frac{(A(u)/A0)-1 + (D_P(u)/N_0)}{A(u)/A_0}	
+	D(u) = \frac{(A(u)/A_0)-1 + (D_P(u)/N_0)}{A(u)/A_0}	
 	\end{equation}
 	
 	\begin{equation}\label{eq:nucleosomeStst}
@@ -237,9 +237,9 @@
 	\end{equation*}
 	where $k_a$ is the rate constant. Using the initial condition $A(0) = A_0$, we find
 	\begin{equation}\label{eq:areaROI}
-	A(u) = A_0+ k_aN_0\exp\left(-\frac{(k_p(1-k_s)+k_s)}{T_{max}^2}T(u)\right)
+	A(u) = A_0+ k_aN_0\exp\left(-\frac{(k_p(1-k_s)+k_s)}{\pi T_{max}^2}T(u)\right)
 	\end{equation}
-	where A0 represents the size of the IDR even in the absence of UV induction.
+	where $A_0$ represents the size of the IDR even in the absence of UV induction.
 	
 	We can now substitute equations \eqref{eq:nucleosomePush}, \eqref{eq:nucleosomeSlide} and \eqref{eq:areaROI} into the steady-state equations \eqref{eq:DNAstst} and \eqref{eq:nucleosomeStst} to get the expressions for $D(u)$ and $H(u)$. Using the relation $D_p(u) = N_p(u)$, we present the result in terms of $N_T(u)$			
 	\begin{equation}\label{eq:DNALoss}
@@ -328,7 +328,7 @@ in equation \eqref{eq:nucleosomeSlide} is plotted against the experimental data 
 \centering
 \includegraphics[width=0.5\linewidth, height=0.3\textheight]{fractionSlidingOutOfIDR}
 \caption{\textbf{Fraction of nucleosomes sliding out of the IDR. The plot
-		against the experimental data resulted in R2 = 0.75}}
+		against the experimental data resulted in $R^2 = 0.75$}}
 \label{fig:fractionSlidingOutOfIDR}
 \end{figure}
 
