added abstract and introduction bullets

--- a/Documents/Article/Version01/epigenomeIntegrityPostUVC.tex
+++ b/Documents/Article/Version01/epigenomeIntegrityPostUVC.tex
@@ -58,10 +58,32 @@
 \usepackage{float}
 \begin{document}	
 	\title{Epigenome Integrity Post UV-C damage}
-	\author{Ofir Shukron \& David Holcman}
+	\author{Ofir Shukron$^a$, Julliette Dabin$^b$, Sophie Polo$^b$, David Holcman$^a$\\
+		\small{$^a$ Ecole Normale Superiure, $^b$ University Paris Diderot}}	
 	\maketitle
-\section{Introduction}\label{section:Introduction}
 	
+\begin{abstract}
+   The spatial 	organization of the chromatin post DNA damage by UV dose is complex. To date, it is unclear how the epigenomic imprinting is recovered after large scale remodeling of the chromatin occurs. Here we propose that the nucleosome are being evicted from the damage region to facilitate efficient repair along the chromatin by two mechanisms: DNA de-compaction and nucleosome sliding. The contribution of sliding and chromatin opening cannot be directly estimated in experiments performed. We therefore constructed a mathematical model describing the dynamics of both nucleosome and DNA as a function of the UV dose to estimate the relative contribution of the two processes to the exertion of DNA and nucleosome signal around the initial damage zone. Our model predicts that the relative contribution of sliding and chromatin opening to the loss of DNA and nucleosome signal in a region of interest around the damage site. Post repair, the epigenetic content is being rearranged back into it proximal initial position by histone chaperons. We propose that spatial organization of the DNA branches which were relocated by repair protein during repair stage are large scale remodeling is 
+\end{abstract}
+
+\section{Introduction}\label{section:Introduction}
+	 % damages caused by UV can be determental to cell survival
+	 
+	 % dNA repair is known to operate through several mechanisms
+	 
+	 % in the process of repair the epigenomic content is being disrupted
+	 
+	 % it is not clear how the cell retains epigenomic imprinting post DNA damage 
+	 
+	 % our hypothesis is chromatin remodling and nucleosome sliding operates post UVC
+	 
+	 % at the end of repair, nucleosomes are being repositioned into their approximate iitial location
+	 
+	 % thus the epigenomic memory is not lost and does not need to be resyntesized 
+	 
+	 % large scale remodeling are being put back to place by functional equilibrium 
+	 
+	 
 	\section{Results}\label{section:Results}
 	To estimate the nucleosome reorganization following DNA damages, we have
 	constructed a mathematical model, where redistribution can be due either to chromatin de-
