--- a/Documents/Report/FinalReportVersions/Version07/MaterialsAndMethodsModel.tex
+++ b/Documents/Report/FinalReportVersions/Version07/MaterialsAndMethodsModel.tex
@@ -86,25 +86,23 @@
 		\label{fig:relatiiveContributionToLoss}
 	\end{figure}
 	
- \section{ Material and methods: Modeling nucleosomes and DNA redistribution following UV
-		damages} 
+ \section{Material and methods: Modeling nucleosomes and DNA redistribution following UV damages} 
 	
 	We present here a model for nucleosomes and DNA re-organization following
 	UV damages. The cascade of events leading to tagged DNA and nucleosomes'
 	redistribution, results in signal extrusion from a region of interest (ROI) up
 	to a maximal loss, measured 15 minutes post UV-C.
 	
-	\subsection{Dynamics of nucleosomes following UV damages
-		in the region of interest}
+	\subsection{Dynamics of nucleosomes following UV damages in the region of interest}
 	
 	Following the experimental protocol, a two-dimensional circular initial damage region (IDR), induced by the UV laser beam, is centered around the focal point (origin of the coordinates) with a fixed area of $A_0$. Following
 	laser induction with a UV dose $u$, the tagged damage region expands radially outward and reaches its maximal area of $A(u)$ after 15 minutes. At the end of expansion, the circular region is defined
-	as the ROI, in which DNA and nucleosome signal is measured at
+	as the ROI, in which DNA and nucleosome signals are measured at
 	time 0 and 15 minutes. The fraction of signal loss is calculated for DNA and nucleosomes as
 	\begin{equation}
 	\frac{signal_0-signal_{15}}{signal_0}
 	\end{equation}	
-	where $signal_0$ and $signal_{15}$ are the DNA or nucleosome signal at time 0 and 15 minutes respectively. 
+	where $signal_0$ and $signal_{15}$ are the DNA or nucleosome signals at time 0 and 15 minutes respectively. 
 	
 	We assume that the loss of DNA and nucleosomes signal post UV-C is due
 	to two mechanisms: the first is chromatin expansion, and the second is nucleosomes sliding along the chromatin. For chromatin expansion, recruitment and
@@ -112,26 +110,34 @@
 	
 	An additional loss of nucleosome signal is caused by the mechanism of nucleosome sliding. Repair proteins slide nucleosomes from damaged position on the DNA away from high concentration of DNA damages. Each nucleosome sliding over damaged positions on the DNA displaces the tagged damages
     spatially in the general direction of the ROI boundary. Additionally, with each nucleosome sliding, the damages in the damage region are exposed, and repair factors are recruited to bind to them.   
-    expansion of the IDR and signal loss from the ROI.
 
     In-line with the description above, we construct a model representing
 	signal loss 15 minutes post UV-C. We do not specifically take into account the
-	mechanism of signal loss in time and only present the steady-state equations
-	for signal loss as a function of the UV dose.
+	mechanism of signal loss in time and only present equations representing the maximal loss of signal as a function of the UV dose.
 	
 	\subsection{Steady-state equations describing DNA and nucleosome loss}
+	The IDR and the ROI are considered to be two-dimensional concentric circular regions, characterized by an area $A_0$ and $A(u)$ respectively,
+	with $A(u)> A_0$, for all $u$ values. We assume an initial uniform distribution of both DNA and nucleosomes in the IDR and its vicinity. As a result, the amount of DNA and nucleosomes in $A(u)$ is proportional $A(u)$. 
+	\begin{equation*}
+	d(A(u))= k_DA(u)
+	\end{equation*}
+	where $k_D$ is measured in units of $bp/\mu m$. Similarly, the number of nucleosome in a given region is proportional to its area
+	\begin{equation*}
+	n(A(u))=k_NN(u)
+	\end{equation*}
 	
-	We assume an initial uniform distribution of both DNA and nucleosome in
-	the IDR and its vicinity. such that the amount of DNA and nucleosomes in
-	the IDR is proportional to its area. We define the number of nucleosomes leaving the IDR 15 minutes post UV-C as $N_T(u) = N_P(u) + N_S(u)$,
+	The total number of nucleosomes leaving the IDR, $N_T(u)$, is the sum of nucleosomes leaving by pushing and sliding, thus 
+	\begin{equation*}
+	N_T(u) = N_P(u) + N_S(u)
+	\end{equation*}
 	with $N_S(u)$ and $N_P(u)$ the number of nucleosomes sliding and pushed out
-	of the IDR, respectively. Nucleosomes pushed out of the IDR are associated
-	with undamaged DNA, therefore we set $D_p(u)/A_0 = N_P(u)/N_0$ to represent this
-	quantity. The IDR and the ROI are considered to be two-dimensional concentric circular regions, characterized by an area $A_0$ and $A(u)$ respectively,
-	with $A(u) > A_0$, for all $u$ values. We shall now compute the fraction of
-	DNA loss (resp. nucleosomes) $D(u)$ (resp. $H(u)$) in the ROI 15 minutes
-	post UV-C.
-	
+	of the IDR, respectively. The amount of undamaged DNA in the IDR, $D_P(u)$, measured in units of bp.   
+	Nucleosomes pushed out of the IDR are associated
+	with undamaged DNA, therefore the fraction of loss is equal we have 
+	\begin{equation*}
+	\frac{D_p(u)}{k_DA_0} = \frac{N_P(u)}{k_NN_0}
+	\end{equation*} 
+		
 	By construction, DNA signal loss is given by the ratio of the amount of
 	DNA in the annulus between the IDR and the ROI plus the nucleosomes
 	pushed out of the IDR to the total amount of signal in the ROI. Nucleosome signal loss is calculated as the sum of the nucleosomes that have been
