--- a/Documents/Report/FinalReportVersions/Version07/MaterialsAndMethodsModel.tex
+++ b/Documents/Report/FinalReportVersions/Version07/MaterialsAndMethodsModel.tex
@@ -100,9 +100,9 @@
 	as the ROI, in which DNA and nucleosome signals are measured at
 	time 0 and 15 minutes. The fraction of signal loss is calculated for DNA and nucleosomes as
 	\begin{equation}
-	\frac{signal_0-signal_{15}}{signal_0}
+	\frac{signal(0)-signal(15)}{signal(0)}
 	\end{equation}	
-	where $signal_0$ and $signal_{15}$ are the DNA or nucleosome signals at time 0 and 15 minutes respectively. 
+	where $signal(0)$ and $signal(15)$ are the DNA or nucleosome signals at time 0 and 15 minutes respectively. 
 	
 	We assume that the loss of DNA and nucleosomes signal post UV-C is due
 	to two mechanisms: the first is chromatin expansion, and the second is nucleosomes sliding along the chromatin. For chromatin expansion, recruitment and
@@ -117,7 +117,7 @@
 	
 	\subsection{Steady-state equations describing DNA and nucleosome loss}
 	The IDR and the ROI are considered to be two-dimensional concentric circular regions, characterized by an area $A_0$ and $A(u)$ respectively,
-	with $A(u)> A_0$, for all $u$ values. We assume an initial uniform distribution of both DNA and nucleosomes in the IDR and its vicinity. As a result, the amount of DNA and nucleosomes in $A(u)$ is proportional $A(u)$. 
+	with $A(u)\leq A_0$, for all $u$ values. We assume an initial uniform distribution of both DNA and nucleosomes in the IDR and its vicinity. As a result, the amount of DNA and nucleosomes in $A(u)$ is proportional $A(u)$. 
 	\begin{equation*}
 	d(A(u))= k_DA(u)
 	\end{equation*}
@@ -135,7 +135,7 @@
 	Nucleosomes pushed out of the IDR are associated
 	with undamaged DNA, therefore the fraction of loss is equal we have 
 	\begin{equation*}
-	\frac{D_p(u)}{k_DA_0} = \frac{N_P(u)}{k_NN_0}
+	\frac{D_p(u)}{k_DA_0} = \frac{N_P(u)}{k_NA_0}
 	\end{equation*} 
 		
 	By construction, DNA signal loss is given by the ratio of the amount of
@@ -144,30 +144,26 @@
 	translocated with the DNA plus the ones that are sliding out, resulting in
 	the following formulas
 	\begin{equation}\label{eq:DNAstst}
-	D(u) = \frac{(A(u)/A_0)-1 + (D_P(u)/A_0)}{A(u)/A_0}	
+	D(u) = \frac{k_D(A(u)-A_0) + \varphi(u)}{k_DA(u)}	
 	\end{equation}
 	
 	\begin{equation}\label{eq:nucleosomeStst}
-	H(u) = D(u) + \frac{N_S(u)/N_0}{A(u)/A_0}	
+	H(u) = D(u) + \frac{N_S(u)}{k_NA(u)}	
 	\end{equation}
 	
 	In order to evaluate the functions above, we will now construct models
 	for the functions $A(u)$ and $N_T(u)$. The increase of DNA damages with UV
 	dose is thought of as governing the dynamics of both nucleosome and DNA
 	signal loss. Therefore, we start our construction with a description of the
-	accumulation of damages $T(u)$ in the IDR, and derive the function $N_T(u)$
-	and $A(u)$ from it
+	accumulation of DNA damages $\varphi_D(u)$ in the IDR, and derive the function $N_T(u)$ and $A(u)$ from it
 	
-	\subsection{Deriving the number of damages $T(u)$}
-	
-	We will derive the equation describing accumulation of damages on a radial
-	cross-section of the IDR and then expand it to the whole IDR. We assume
-	here that the rate of accumulating DNA damages along the radius of the
-	IDR, $T_r(u)$, with increasing UV dose in the IDR is increasing proportional
-	to the undamaged DNA in that cross-section.
+	\subsection{Deriving the amount of damaged DNA $T(u)$}
+	We assume here that the rate of accumulating DNA damages in the
+	IDR with increasing UV dose is increasing proportional
+	to the undamaged DNA in the IDR.
 	
 	\begin{equation*}
-	\frac{dT_r(u)}{du} = k_t(T_{max} - T_r(u))
+	\frac{dT(u)}{du} = k_t(T_{max} - T_r(u))
 	\end{equation*}	
 	with $k_t$ the rate constant, and $T_{max}$ the maximal number of damages possible
 	along the radius. Using the initial condition $T_r(0) = 0$, the solution is
